<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg">

        <ImageView
            android:id="@+id/im_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mask" />

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/path" />

        <TextView
            android:id="@+id/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="46dp"
            android:alpha="0.5"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/arrowBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleOfFilm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBack" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/red_for_tag"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleOfFilm" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/star2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headline"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toBottomOf="@+id/headline"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toBottomOf="@+id/headline"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toBottomOf="@+id/headline"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/reviews"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toBottomOf="@+id/headline"
            app:srcCompat="@drawable/star_icon_grey" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:text="@string/_125_reviews"
            android:textColor="#6D6D80"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/star5"
            app:layout_constraintTop_toBottomOf="@+id/headline" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/storyline"
            android:textColor="@color/text_2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star1" />

        <TextView
            android:id="@+id/story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:alpha="0.75"
            android:text="@string/av_description"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/cast"
            android:textColor="@color/text_2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/story" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            android:paddingBottom="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>